# agentic-protocol-demos

./: .gitignore  LICENSE  README.md  a2a_server.py  acp_client.py  agent_capabilities.py  agent_manager.py  hybrid_server.py  launch_chat_app.sh  mcp-config-example.json  mcp-config.json  mcp-server-enhanced.py  mcp-server-test.py  pyproject.toml  requirements.txt  run.sh  task_orchestrator.py  test-acp-functions.py  test-enhanced-mcp-functions.py  test-mcp-functions.py  test-server-startup.py  validate-config.py
a2a/: README.md  a2a_config.py  a2a_server.py
acp/: README.md  acp_server.py  test-acp-functions.py
chat-app/: README.md  launch_streamlit.sh  streamlit_app.py  streamlit_requirements.txt
email-examples/: 3-way-intro.md  call-follow-up.md
mcp-server/: README.md  directory.csv  mcp-config.json  mcp-server-test.py  test-mcp-functions.py  validate-config.py
mcp-server/prompts/: mesh.md
shared/: README.md  agent_manager.py  hybrid_server.py  task_orchestrator.py
