[project]
name = "agentic-protocol-demos"
version = "0.1.0"
description = "Agentic Protocol Demos - MCP Server with A2A Integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.167.0",
    "google-auth-oauthlib>=1.2.2",
    "mcp[cli]>=1.6.0",
    "openai>=1.12.0",
    "openai-agents>=0.0.12",
    "python-dotenv>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "httpx>=0.25.0",
    "asyncio-mqtt>=0.16.0",
]
